cambio de datos en angular.json y agregado de pipe

--- a/src/app/tabla/tabla.component.html
+++ b/src/app/tabla/tabla.component.html
@@ -12,10 +12,9 @@
   </thead>
   <tbody>
     <tr *ngFor="let persona of baseDePersonas">
-      <!-- <th scope="row">{{ persona.id }}</th> -->
       <td scope="row">{{ persona.apellido }}</td>
       <td>{{ persona.nombre }}</td>
-      <td>{{ persona.nacimiento }}</td>
+      <td>{{ persona.nacimiento | date: "dd/MM/yyyy" }}</td>
       <td>{{ persona.direccion }}</td>
       <td>{{ persona.telefono }}</td>
       <td>{{ persona.pais }}</td>
